; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/atf/atf-c/extr_tp.c_atf_tp_add_tc.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/atf/atf-c/extr_tp.c_atf_tp_add_tc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_5__* }
%struct.TYPE_5__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @atf_tp_add_tc(%struct.TYPE_6__* %0, i32* %1) #0 {
  %3 = alloca %struct.TYPE_6__*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = call i32 @atf_tc_get_ident(i32* %7)
  %9 = call i32* @find_tc(%struct.TYPE_6__* %6, i32 %8)
  %10 = icmp eq i32* %9, null
  %11 = zext i1 %10 to i32
  %12 = call i32 @PRE(i32 %11)
  %13 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %14 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %13, i32 0, i32 0
  %15 = load %struct.TYPE_5__*, %struct.TYPE_5__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %15, i32 0, i32 0
  %17 = load i32*, i32** %4, align 8
  %18 = call i32 @atf_list_append(i32* %16, i32* %17, i32 0)
  store i32 %18, i32* %5, align 4
  %19 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %20 = load i32*, i32** %4, align 8
  %21 = call i32 @atf_tc_get_ident(i32* %20)
  %22 = call i32* @find_tc(%struct.TYPE_6__* %19, i32 %21)
  %23 = icmp ne i32* %22, null
  %24 = zext i1 %23 to i32
  %25 = call i32 @POST(i32 %24)
  %26 = load i32, i32* %5, align 4
  ret i32 %26
}

declare dso_local i32 @PRE(i32) #1

declare dso_local i32* @find_tc(%struct.TYPE_6__*, i32) #1

declare dso_local i32 @atf_tc_get_ident(i32*) #1

declare dso_local i32 @atf_list_append(i32*, i32*, i32) #1

declare dso_local i32 @POST(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
